# Vehicle-Telemetry-and-Diagnostics-System-Simulation

./: CMakeLists.txt  README.md
inc/: Battery.hpp  Diagnostics.hpp  Ecu.hpp  Logger.hpp  RadarSensor.hpp  Rpi_Connection.hpp  Rpm.hpp  Sensor.hpp  SpeedSensor.hpp  TempSesnor.hpp  batteryerror.h  common.hpp  distanceerror.h  mainwindow.h  qcguagewidget.h  speederror.h  temperror.h
src/: Battery.cpp  Diagnostics.cpp  Ecu.cpp  Logger.cpp  RadarSensor.cpp  Rpi_Connection.cpp  Rpm.cpp  SpeedSensor.cpp  TempSesnor.cpp  batteryerror.cpp  common.cpp  distanceerror.cpp  mainwindow.cpp  qcguagewidget.cpp  speederror.cpp  temperror.cpp
ui/: batteryerror.ui  distanceerror.ui  mainwindow.ui  speederror.ui  temperror.ui
